# make

./: CMakeLists.txt  CMake_doc  Makefile  extern.c  main  makefile_doc.txt  myhead.h
cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_build/library_folder/: Makefile  cmake_install.cmake
library_folder/: CMakeLists.txt  mysrc2.c
makefile_build/: Makefile
test_folder/: CMakeLists.txt  cmake_doc.txt  test.cpp
